fixed gap issues in mobile

--- a/styles/components/graph.scss
+++ b/styles/components/graph.scss
@@ -42,7 +42,7 @@
   align-items: flex-end;
   // width: 80%;
   margin: 0 auto;
-  @media only screen and (min-width: $bp-large) {
+  @media only screen and (min-width: $bp-small) {
     width: 100%;
     gap: 1rem;
   }
@@ -51,7 +51,6 @@
     // justify-content: unset;
     gap: 2rem;
   }
-  gap: 0.5rem;
   &__subheading {
     @extend .subheading;
     text-align: right !important;
@@ -121,7 +120,7 @@
     &--bottom {
       display: flex;
       justify-content: center;
-      gap: 0.15rem;
+      gap: 0rem;
       border-radius: 2.86184px 2.86184px 0px 0px;
       @media only screen and (min-width: $bp-smallester) {
         gap: 0.5rem;
